# minimal-perceptron

./: CMakeLists.txt  README.md
include/: Input.h  Perceptron.h
src/: Input.cpp  Perceptron.cpp  main.cpp
